--- a/Лабораторні заняття.html
+++ b/Лабораторні заняття.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>KID-41 Kasparov Evgenii</title>
+  <title>KID-41 Mykola Bovsunivskyi</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
